syntax="proto3";

package NAlice.NSocialSharing.Context;
import "alice/paskills/social_sharing/proto/api/web_api.proto";
import "alice/paskills/social_sharing/proto/api/web_page.proto";
import "alice/megamind/protos/common/frame.proto";
import "alice/protos/api/matrix/delivery.proto";

option go_package = "a.yandex-team.ru/alice/paskills/social_sharing/proto/context";
option java_package = "ru.yandex.alice.social.sharing.proto.context";

message TSendPushRequest {
    string Uid = 1 [json_name = "uid"];
    string DeviceId = 2 [json_name = "device_id"];
    NAlice.TSemanticFrameRequestData Directive = 3 [json_name = "directive"];
}

message TSendPushResponse {
    NMatrix.NApi.TDeliveryResponse NotificatorResponse = 1 [json_name = "notificator_response"];
}

